Added gradle files again

--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,8 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+}
+test {
+    useJUnitPlatform()
 }
